fix for regression bug #198946 "repainting horribly broken" caused by roc's checkin for bug #113232 this is roc's patch for the problem.